# oc_tool

./: .gitignore  Cargo.toml  README.md  app.manifest  prompt
.github/workflows/: release.yml
src/: actions.rs  build.rs  constants.rs  errors.rs  lib.rs  main.rs  models.rs  orchestrator.rs  power.rs  ui.rs  utils.rs  worker.rs
src/tweaks/: command_tweaks.rs  group_policy.rs  group_policy_tweaks.rs  method.rs  mod.rs  msr.rs  powershell.rs  powershell_tweaks.rs  registry.rs  registry_tweaks.rs  rust.rs  rust_tweaks.rs
src/tweaks/definitions/: disable_processor_idle_states.rs  kill_explorer.rs  kill_non_critical_services.rs  low_res_mode.rs  mod.rs  process_idle_tasks.rs  registry.rs  slow_mode.rs  ultimate_performance_plan.rs
src/tweaks/group_policy/: method.rs  mod.rs
src/tweaks/msr/: cache.rs  method.rs  mod.rs  prefetch.rs
src/tweaks/powershell/: method.rs  mod.rs
src/tweaks/registry/: kernel.rs  method.rs  mod.rs
src/tweaks/winapi/: kill_explorer.rs  kill_non_critical_services.rs  low_res_mode.rs  mod.rs  slow_mode.rs  ultimate_performance_plan.rs
src/ui/: button.rs  combobox.rs  container.rs  mod.rs  switch.rs  widgets.rs
src/utils/: cpu.rs  mod.rs  powershell.rs  registry.rs  services.rs  smu.rs  windows.rs  winring0.rs
src/widgets/: button.rs  mod.rs  switch.rs
