[package]
name = "oc_tool"
version = "1.0.0"
edition = "2021"


[dependencies]
whoami = "1.5.2"
winreg = "0.52.0"
windows = { version = "0.58", features = [
    "Win32_Security_Authentication_Identity",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Memory"
]}
anyhow = "1.0.89"
winapi = {version="0.3.9", features=[
    "securitybaseapi", 
    "processthreadsapi",
    "winnt",
    "powersetting",
    "winbase"
    ]}
tracing = "0.1.40"
eframe = "0.28.1"
egui = "0.28.1"
crossbeam = "0.8.4"
tracing-subscriber = "0.3.18"
tinyfiledialogs = "3.9.1"
num_cpus = "1.16.0"
DisplaySettings = "0.1.2"
