[package]
name = "oc_tool"
version = "1.0.0"
edition = "2021"


[dependencies]
winreg = { version = "0.52.0" }
windows = { version = "0.58", features = [
    "Win32_Security_Authentication_Identity",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Memory",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System_WindowsProgramming",
] }
anyhow = "1.0.89"
tracing = "0.1.40"
eframe = "0.28.1"
egui = "0.28.1"
tracing-subscriber = "0.3.18"
tinyfiledialogs = "3.9.1"
crossbeam = "0.8.4"
widestring = "1.1.0"
