[package]
name = "oc_tool"
version = "1.0.0"
edition = "2021"
build = "src/build.rs"


[dependencies]
egui = { version = "0.29.1" }
eframe = "0.29.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Memory",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
] }
winreg = "0.52.0"
widestring = "1.1.0"
num_cpus = "1.16.0"
crossbeam = "0.8.4"
anyhow = "1.0.89"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
once_cell = "1.20.2"
cstr = "0.2.12"
egui_dialogs = "0.3.5"
lazy_static = "1.5.0"


[profile.release-lto]
inherits = "release"
opt-level = "s"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
